; ModuleID = '/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_atu_flush_port.c'
source_filename = "/home/carl/AnghaBench/openwrt/target/linux/generic/files/drivers/net/phy/extr_ar8327.c_ar8327_atu_flush_port.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar8xxx_priv = type { i32 }

@AR8327_REG_ATU_FUNC = common dso_local global i32 0, align 4
@AR8327_ATU_FUNC_BUSY = common dso_local global i32 0, align 4
@AR8327_ATU_PORT_NUM_S = common dso_local global i32 0, align 4
@AR8327_ATU_FUNC_OP_FLUSH_PORT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ar8xxx_priv*, i32)* @ar8327_atu_flush_port to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ar8327_atu_flush_port(%struct.ar8xxx_priv* %0, i32 %1) #0 {
  %3 = alloca %struct.ar8xxx_priv*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ar8xxx_priv* %0, %struct.ar8xxx_priv** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %3, align 8
  %8 = load i32, i32* @AR8327_REG_ATU_FUNC, align 4
  %9 = load i32, i32* @AR8327_ATU_FUNC_BUSY, align 4
  %10 = call i32 @ar8216_wait_bit(%struct.ar8xxx_priv* %7, i32 %8, i32 %9, i32 0)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %27, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* @AR8327_ATU_PORT_NUM_S, align 4
  %16 = shl i32 %14, %15
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* @AR8327_ATU_FUNC_OP_FLUSH_PORT, align 4
  %18 = load i32, i32* %5, align 4
  %19 = or i32 %18, %17
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* @AR8327_ATU_FUNC_BUSY, align 4
  %21 = load i32, i32* %5, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %5, align 4
  %23 = load %struct.ar8xxx_priv*, %struct.ar8xxx_priv** %3, align 8
  %24 = load i32, i32* @AR8327_REG_ATU_FUNC, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @ar8xxx_write(%struct.ar8xxx_priv* %23, i32 %24, i32 %25)
  br label %27

27:                                               ; preds = %13, %2
  %28 = load i32, i32* %6, align 4
  ret i32 %28
}

declare dso_local i32 @ar8216_wait_bit(%struct.ar8xxx_priv*, i32, i32, i32) #1

declare dso_local i32 @ar8xxx_write(%struct.ar8xxx_priv*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
